resources/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* fonts  ////////////////////////////////////////////*/

.lato-thin {
  font-family: "Lato", system-ui;
  font-weight: 100;
  font-style: normal;
}

.lato-light {
  font-family: "Lato", system-ui;
  font-weight: 300;
  font-style: normal;
}

.lato-regular {
  font-family: "Lato", system-ui;
  font-weight: 400;
  font-style: normal;
}

.lato-thin-italic {
  font-family: "Lato", system-ui;
  font-weight: 100;
  font-style: italic;
}

/* page ////////////////////////////////////////////////// */
html {
  line-height: 1.5;
}
html,
body {
  color: #555;
  font-family: "Lato", "sans-serif";
  font-weight: 300;
  font-size: 20px;
  text-rendering: optimizeLegibility;
  overflow-x: hidden;
}

/* head ////////////////////////////////////////////////// */
.header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
    url("img/hero.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
  background-attachment: fixed;
  /* zoom: 1; */
}

.row {
  max-width: 1140;
  margin: 0 auto;
  zoom: 1;
}

.row:before,
row:after {
  content: "";
  display: table;
}

.row:after {
  clear: both;
}

.logo {
  height: 100px;
  width: auto;
  float: left;
  margin-top: 20px;
  position: static;
  padding-left: 55px;
}

img {
  border-style: none;
}

/* navigation  ////////////////////////////////////////////*/

.main-nav li {
  display: inline-block;
  margin-left: 40px;
  text-transform: uppercase;
  text-decoration: none;
}

.main-nav {
  display: flex;
  justify-content: flex-end;
  padding-top: 55px;
  padding-right: 55px;
  list-style: none;
}

/* links ////////////////////////////////////////////////// */

a {
  border-bottom-color: transparent;
  text-decoration: none;
  color: #fff;
}

a:hover {
  padding: 8px 0;
  border-bottom: 2px solid #e67e27;
  transition: border-bottom 0.2s;
}

a {
  background-color: transparent;
}

/* hero ////////////////////////////////////////////*/

.hero-text-box {
  width: 1140px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hero-text-box h1 {
  margin-top: 0;
  margin-bottom: 20px;
  color: #fff;
  font-size: 240%;
  word-spacing: 4px;
  letter-spacing: 1px;
  font-weight: 300;
  text-transform: uppercase;
}

/* buttons////////////////////////////////////////////////// */
.btn {
  display: inline-block;
  padding: 10px 30px;
  font-weight: 300;
  text-decoration: none;
  border-radius: 200px;
  color: #fff;
}

.btn .btn:hover,
.btn:active {
  background-color: #cf6d17;
}

.btn-full {
  background-color: #e67e27;
  border: 1px solid #e67e27;
  color: #fff;
}

.btn-full:hover,
.btn-full:active {
  background-color: #cf6d17;
  border: 1px solid #e67e22;
}

/* .btn-full:visited; */

.btn-ghost {
  border: 1px solid;
  color: #e67e22;
  transition: color 0.2s;
}

.btn-ghost:hover,
.btn-ghost:active {
  border: 1px solid #e67e27;
  background-color: #e67e27;
  color: #fff;
}

.btn:link {
  display: inline-block;
  padding: 10px 30px;
  font-weight: 300;
  text-decoration: none;
  border-radius: 200px;
  transition: background-color, 0.2s, color 0.2s;
}

/* character display// */
h2:after {
  display: block;
  height: 2px;
  width: 100px;
  background-color: #e67e22;
  content: "";
  margin: auto;
  margin-top: 30px;
}
#features {
  padding: 80px 0;
}

.row {
  zoom: 1;
}
.row-1 h2 {
  text-transform: uppercase;
  word-spacing: 2px;
  text-align: center;
  letter-spacing: 1px;
  margin-bottom: 30px;
  font-size: 180%;
  font-weight: 300;
}

.copy {
  margin-bottom: 30px;
  line-height: 145%;
  width: 70%;
  margin-left: 15%;

  text-align: left;
}

.row-2 {
  display: flex;
  justify-content: center;
}

.block-1 {
}

.block h3 {
  font-size: 110%;
  margin-bottom: 15px;
}

h1,
h2,
h3 {
  font-weight: 300;
  text-transform: uppercase;
}

.block p {
  font-size: 90%;
  line-height: 145%;
}

.block {
  flex-shrink: 1;
}

